[gd_scene load_steps=3 format=2]

[ext_resource path="res://interface/LocalMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/changa-regular.tres" type="DynamicFont" id=2]

[node name="LocalMenu" type="VBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1278.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="Back" type="Button" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 574.0
margin_top = 86.0
margin_right = 704.0
margin_bottom = 167.0
rect_min_size = Vector2( 60, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "< BACK"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags", "custom_fonts" ]

[node name="ScoreContainer" type="HBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 460.0
margin_top = 257.0
margin_right = 817.0
margin_bottom = 342.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 0
_sections_unfolded = [ "Focus", "Mouse", "Size Flags" ]

[node name="ScoreLabel" type="Label" parent="ScoreContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 223.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "Score to win:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ScoreInput" type="LineEdit" parent="ScoreContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 227.0
margin_right = 357.0
margin_bottom = 85.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
max_length = 3
focus_mode = 2
context_menu_enabled = true
placeholder_text = "3"
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Caret", "Placeholder" ]

[node name="Local" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 528.0
margin_top = 432.0
margin_right = 750.0
margin_bottom = 513.0
rect_min_size = Vector2( 60, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "START GAME"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]

[connection signal="text_changed" from="ScoreContainer/ScoreInput" to="." method="_on_ScoreInput_text_changed"]

[connection signal="pressed" from="Local" to="." method="_on_Local_pressed"]


